--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My Links Tree</title>
-    <link rel="stylesheet" href="C:\Users\MY HP\PycharmProjects\HTML_CSSproject\PART1.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
      <h1>Welcome to the Links Tree </h1>
